--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ li {
   font-weight: 700;
 }
 
-@media (max-width: 600px) {
+@media only screen and (min-width: 320px) {
   .container > .container_questions {
     padding: 25px;
     font-size: 0.8rem;
