--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ li {
   font-weight: 700;
 }
 
-@media only screen and (min-width: 320px) {
+@media only screen and (max-width: 300px) {
   .container > .container_questions {
     padding: 25px;
     font-size: 0.8rem;
@@ -116,7 +116,7 @@ li {
     display: flex;
     justify-content: start;
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
   }
 
   .btn {
@@ -141,7 +141,7 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2rem;
+    padding: 1rem;
     background: #003ef5;
     width: 800px;
     color: white;
