--- a/style.css
+++ b/style.css
@@ -93,8 +93,20 @@ li {
   font-size: 1rem;
   font-weight: 700;
 }
+/* FOOTER */
+footer {
+  position: fixed;
+  padding: 10px 10px 0px 20px;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  color: #003ef5;
+  text-align: center;
+  font-size: 0.6rem;
+  font-weight: 700;
+}
 
-@media only screen and (max-width: 400px) {
+@media screen and (max-width: 700px) {
   .container > .container_questions {
     padding: 25px;
     font-size: 0.8rem;
@@ -143,25 +155,20 @@ li {
     align-items: center;
     padding: 1rem;
     background: #003ef5;
-    width: 300px;
+    width: 100%;
     color: white;
-    font-size: 1rem;
+    font-size: 0.7rem;
     font-weight: 700;
   }
 
   footer {
-    width: 50%;
+    position: fixed;
+    padding: 10px 10px 0px 20px;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    color: #003ef5;
+    text-align: center;
+    font-size: 0.5rem;
   }
-}
-/* FOOTER */
-footer {
-  position: fixed;
-  padding: 10px 10px 0px 20px;
-  bottom: 0;
-  width: 100%;
-  height: 50px;
-  color: #003ef5;
-  text-align: center;
-  font-size: 0.6rem;
-  font-weight: 700;
 }
